--- a/SchoolDiarySystem/Views/Subject/Index.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Index.cshtml
@@ -8,10 +8,30 @@
             <h3>Subject</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="~/Views/Admin/Index.cshtml">Home</a>
                 </li>
                 <li>All Subject</li>
             </ul>
+        </div>
+        <div class="col-4-xxxl col-12">
+            <div class="card height-auto">
+                <div class="card-body">
+                    <div class="heading-layout1">
+                        <div class="item-title">
+                            <h3>Create A Subject</h3>
+                        </div>
+                    </div>
+                    <form class="new-added-form">
+                        <div class="row">
+                            <div class="col-12 form-group mg-t-8">
+                                <p>
+                                    @Html.ActionLink("Create", "Create", "Subject", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                                </p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
         <!-- Breadcubs Area End Here -->
         <!-- Teacher Table Area Start Here -->
@@ -44,18 +64,18 @@
                             </tr>
                         </thead>
                         @*<tfoot>
-                                <tr>
-                                    <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                    <th>@Html.DisplayNameFor(m => m.City)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                    <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                    <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                    <th></th>
-                                </tr>
-                            </tfoot>*@
+                            <tr>
+                                <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                                <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                                <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                                <th>@Html.DisplayNameFor(m => m.City)</th>
+                                <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                                <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                                <th>@Html.DisplayNameFor(m => m.Email)</th>
+                                <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                                <th></th>
+                            </tr>
+                        </tfoot>*@
                         <tbody>
                             @foreach (var item in Model)
                             {
