--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -5,13 +5,33 @@
     <div class="dashboard-content-one">
         <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Notice Board</h3>
+            <h3>Topic Board</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="~/Views/Admin/Index.cshtml">Home</a>
                 </li>
-                <li>Notice</li>
+                <li>Topic</li>
             </ul>
+        </div>
+        <div class="col-4-xxxl col-12">
+            <div class="card height-auto">
+                <div class="card-body">
+                    <div class="heading-layout1">
+                        <div class="item-title">
+                            <h3>Create A Topic</h3>
+                        </div>
+                    </div>
+                    <form class="new-added-form">
+                        <div class="row">
+                            <div class="col-12 form-group mg-t-8">
+                                <p>
+                                    @Html.ActionLink("Create", "Create", "Topic", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                                </p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
         <!-- Breadcubs Area End Here -->
         <div class="row">
